# MissileSimulation

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  runs.py  scenarios.py
backend/app/api/websocket/: sim_ws.py
backend/app/models/schema/: run_archive.py  scenario.py  simulation.py  ws_messages.py
backend/app/persistence/: run_archive.py
backend/app/simulation/: defense_config.py  engine.py  runner.py  scenario_loader.py
backend/app/simulation/interception/: geometric.py
backend/app/simulation/physics/: ballistic.py  cruise.py
backend/data/runs/: run_1774475033352_38bd5b17.json  run_1774479586405_bc12f3c9.json  run_1774480650028_2e87709e.json  run_1774483573890_6e3c8433.json  run_1774487574282_efeeff0f.json
backend/db/: schema.sql
backend/scenarios/: scenario_alpha.json  scenario_bravo.json
backend/tests/: conftest.py  test_ballistic.py  test_cruise.py  test_engine.py  test_geometric.py  test_runs_api.py
docs/: parallel-feature-task-board.md  product-engineering-gap-audit.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/config/: defenseAssets.ts  impactPresets.ts  missileTypes.ts
frontend/src/router/: RouterSync.tsx
frontend/src/services/: impactEffectManager.ts  messageHandler.ts  runArchiveApi.ts  scenarioApi.ts  viewerRegistry.ts  wsClient.ts
frontend/src/store/: cameraStore.ts  dashboardStore.ts  (+4 more)
(+75 files in other folders)
